Commit current state with todos